--- a/team.html
+++ b/team.html
@@ -39,7 +39,7 @@
 						<div class="container">
 							<div class="col-md-12 col-sm-12 col-xs-12 no-padding content_wrap">
 								<div class="col-md-12 col-sm-12 col-xs-12 text_wrap">
-									<h2>Team</h2>
+									<h2>The Team</h2>
 									<!-- <p>A local DEF CON group (DCG) is part of “a global community of hackers, thinkers, makers and others bent on being part of the elegant chaos they want to see in the world” (--The Dark Tangent)<br/> -->
 								</div>
 								<div class="col-md-8 col-sm-6 col-xs-12 col-md-offset-2 col-sm-offset-2">
