--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
 												<img src="images/team/team_saurabh.jpg" alt="" />
 											</div>
 											<div class="col-md-12 text_wrap">
-												<h4>Mr. Saurabh Sharma</h4>
+												<h4>Mr. Sourabh Sharma</h4>
 											</div>
 										</div>
 									</div>
@@ -89,7 +89,7 @@
 												<img src="images/team/team_robin.jpg" alt="" />
 											</div>
 											<div class="col-md-12 text_wrap">
-												<h4>Mr. Robin R</h4>
+												<h4>Mr. Robin Ramani</h4>
 											</div>
 										</div>
 									</div>
