--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 						<a class="logo" href="./index.html">DC 0965</a>
 						<ul>
 							<li><a href="./team.html">Team</a></li>
+							<li><a href="https://www.defcon.org/">DC Home</a></li>
+							<li><a href="https://defcongroups.org/dcpages-int.html">DC Groups</a></li>
 						</ul>
 					</header>
 
