Events page, off canvas menu

--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 
 <html>
 	<head>
-		<title>DEFCON Kuwait Group | Team</title>
+		<title>DEFCON Kuwait Group | Events</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" href="./css/style.css" />
 
 	</head>
-	<body class="team_page">
+	<body class="events_page">
 
 		<!-- Offcanvas-menu -->
 		<div id="offcanvas_menu" uk-offcanvas="mode: push; flip: true; overlay: false">
@@ -58,68 +58,34 @@
 						<div class="container">
 							<div class="col-md-12 col-sm-12 col-xs-12 no-padding content_wrap">
 								<div class="col-md-12 col-sm-12 col-xs-12 text_wrap">
-									<h2>The Team</h2>
-								
+									<h2>DC 0965 Events and Meet-ups</h2>
 								</div>
-								<div class="col-md-8 col-sm-6 col-xs-12 col-md-offset-2 col-sm-offset-2">
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
+							</div>
+						</div>
+					</section>
+					<section id="two" class="wrapper style1 special">
+						<div class="container">
+							<div class="col-md-12 col-sm-12 col-xs-12 no-padding content_wrap">
+								<div class="col-md-12 col-sm-12 col-xs-12">
+									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_suwait.jpg" alt="" />
-											</div>
-											<div class="col-md-12 text_wrap">
-												<h4>Mr. Issa Al-Suwait</h4>
-											</div>
+											<h4>DC0471 MEET-UP 0X03 HACKER VILLAGE</h4>
+											<p><strong>Date : </strong>11th May, 2019 : 09:00 AM to 06:30 PM</p>
+											<p><strong>Venue : </strong>B-Hub, Mar Ivanios Vidyanagar, Nalanchira, Trivandrum.</p>
 										</div>
 									</div>
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
+									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_saurabh.jpg" alt="" />
-											</div>
-											<div class="col-md-12 text_wrap">
-												<h4>Mr. Sourabh Sharma</h4>
-											</div>
+											<h4>DC0471 MEET-UP 0X03 HACKER VILLAGE</h4>
+											<p><strong>Date : </strong>11th May, 2019 : 09:00 AM to 06:30 PM</p>
+											<p><strong>Venue : </strong>B-Hub, Mar Ivanios Vidyanagar, Nalanchira, Trivandrum.</p>
 										</div>
 									</div>
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
+									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_bruce.jpg" alt="" />
-											</div>
-											<div class="col-md-12 text_wrap">
-												<h4>Mr. Bruce Leo Jockin</h4>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
-										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_samar.jpg" alt="" />
-											</div>
-											<div class="col-md-12 text_wrap">
-												<h4>Mrs. Samar Rashad</h4>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
-										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_robin.jpg" alt="" />
-											</div>
-											<div class="col-md-12 text_wrap">
-												<h4>Mr. Robin Ramani</h4>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
-										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_ubais.jpg" alt="" />
-											</div>
-											<div class="col-md-12 text_wrap">
-												<h4>Mr. Ubais P K</h4>
-											</div>
+											<h4>DC0471 MEET-UP 0X03 HACKER VILLAGE</h4>
+											<p><strong>Date : </strong>11th May, 2019 : 09:00 AM to 06:30 PM</p>
+											<p><strong>Venue : </strong>B-Hub, Mar Ivanios Vidyanagar, Nalanchira, Trivandrum.</p>
 										</div>
 									</div>
 								</div>
