--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
 
 	</head>
 	<body class="landing">
+		<!-- Offcanvas-menu -->
+		<div id="offcanvas_menu" uk-offcanvas="mode: push; flip: true; overlay: false">
+			<div class="uk-offcanvas-bar">
+				<button class="uk-offcanvas-close" type="button" uk-close></button>
+				<ul>
+					<li><a href="./index.html">Home</a></li>
+					<li><a href="./team.html">Team</a></li>
+					<li><a href="./events.html">Events</a></li>
+					<li><a href="https://www.defcon.org/">DC Home</a></li>
+					<li><a href="https://defcongroups.org/dcpages-int.html">DC Groups</a></li>
 
+				</ul>
+		
+			</div>
+		</div>
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
@@ -30,9 +44,11 @@
 					<header id="header" class="alt">
 						<a class="logo" href="./index.html">DC 0965</a>
 						<ul>
-							<li><a href="./team.html">| Team |</a></li>
+							<!-- <li><a href="./team.html">| Team |</a></li>
 							<li><a href="https://www.defcon.org/">| DC Home |</a></li>
-							<li><a href="https://defcongroups.org/dcpages-int.html">| DC Groups |</a></li>
+							<li><a href="https://defcongroups.org/dcpages-int.html">| DC Groups |</a></li> -->
+							<li><button class="uk-button uk-button-default" type="button" uk-toggle="target: #offcanvas_menu">&#9776;</button></li>
+
 						</ul>
 					</header>
 
