cfp page, menu cfp link, ui fix

--- a/events.html
+++ b/events.html
@@ -31,6 +31,7 @@
 						<li><a href="./index.html">Home</a></li>
 						<li><a href="./team.html">Team</a></li>
 						<li><a href="./events.html">Events</a></li>
+						<li><a href="./cfp.html">CFP</a></li>
 						<li><a href="https://www.defcon.org/">DC Home</a></li>
 						<li><a href="https://defcongroups.org/dcpages-int.html">DC Groups</a></li>
 	
@@ -69,23 +70,16 @@
 								<div class="col-md-12 col-sm-12 col-xs-12">
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<h4>DC0471 MEET-UP 0X03 HACKER VILLAGE</h4>
-											<p><strong>Date : </strong>11th May, 2019 : 09:00 AM to 06:30 PM</p>
-											<p><strong>Venue : </strong>B-Hub, Mar Ivanios Vidyanagar, Nalanchira, Trivandrum.</p>
+											<h4>DC0965 MEET-UP 0X02 The Big Meet</h4>
+											<p><strong>Date: </strong>28th March,2020 : 09:00 AM to 05:00 PM</p>
+											<p><strong>Venue: </strong>TBD</p>
 										</div>
 									</div>
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<h4>DC0471 MEET-UP 0X03 HACKER VILLAGE</h4>
-											<p><strong>Date : </strong>11th May, 2019 : 09:00 AM to 06:30 PM</p>
-											<p><strong>Venue : </strong>B-Hub, Mar Ivanios Vidyanagar, Nalanchira, Trivandrum.</p>
-										</div>
-									</div>
-									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
-										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<h4>DC0471 MEET-UP 0X03 HACKER VILLAGE</h4>
-											<p><strong>Date : </strong>11th May, 2019 : 09:00 AM to 06:30 PM</p>
-											<p><strong>Venue : </strong>B-Hub, Mar Ivanios Vidyanagar, Nalanchira, Trivandrum.</p>
+											<h4>DC0965 MEET-UP 0X01 The Kick-Off</h4>
+											<p><strong>Date: </strong>15th January, 20120 : 06:30 PM to 09:00 PM</p>
+											<p><strong>Venue: </strong>TBD</p>
 										</div>
 									</div>
 								</div>
