--- a/team.html
+++ b/team.html
@@ -31,6 +31,7 @@
 						<li><a href="./index.html">Home</a></li>
 						<li><a href="./team.html">Team</a></li>
 						<li><a href="./events.html">Events</a></li>
+						<li><a href="./cfp.html">CFP</a></li>
 						<li><a href="https://www.defcon.org/">DC Home</a></li>
 						<li><a href="https://defcongroups.org/dcpages-int.html">DC Groups</a></li>
 	
