--- a/cfp.html
+++ b/cfp.html
@@ -60,6 +60,7 @@
 							<div class="col-md-12 col-sm-12 col-xs-12 no-padding content_wrap">
 								<div class="col-md-12 col-sm-12 col-xs-12 text_wrap">
 									<h2>CALL FOR PAPERS</h2>
+									<br><h3>0X02 - CFP OPEN </h3>
 								</div>
 							</div>
 						</div>
