--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							<div class="col-md-12 no-padding content_wrap">
 								<div class="col-md-6 col-sm-6 col-xs-12 text_wrap">
 									<h2>Areas of interest</h2>
-									<p>Being a group of Information security professionals in the Middle East region, we’ve special interest into evolving red team methodologies and treat intelligence approaches to explore new age intrusion detection possibilities. </br></br>
+									<p>Being a group of Information security professionals in the Middle East region, we’ve special interest into evolving red team methodologies and threat intelligence approaches to explore new age intrusion detection possibilities. </br></br>
 	By working together, sharing knowledge will help us to give the best in protecting Public, Private and Government sectors we bound to.</p>
 								</div>
 								<div class="col-md-6 col-sm-6 col-xs-12 img_wrap">
