added team and advisors sections, new members added

--- a/team.html
+++ b/team.html
@@ -66,26 +66,6 @@
 									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_suwait.jpg" alt="" />
-											</div>
-											<div class="col-md-12 text_wrap">
-												<h4>Mr. Issa Al-Suwait</h4>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
-										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_saurabh.jpg" alt="" />
-											</div>
-											<div class="col-md-12 text_wrap">
-												<h4>Mr. Sourabh Sharma</h4>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
-										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<div class="col-md-12 image_wrap">
 												<img src="images/team/team_bruce.jpg" alt="" />
 											</div>
 											<div class="col-md-12 text_wrap">
@@ -120,6 +100,61 @@
 											</div>
 											<div class="col-md-12 text_wrap">
 												<h4>Mr. Ubais P K</h4>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
+										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
+											<div class="col-md-12 image_wrap">
+												<img src="images/team/team_kailas.jpg" alt="" />
+											</div>
+											<div class="col-md-12 text_wrap">
+												<h4>Mr. Kailash</h4>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-12 col-sm-12 col-xs-12 text_wrap uk-margin-medium-top">
+									<h2>Advisors</h2>
+								</div>
+								<div class="col-md-8 col-sm-6 col-xs-12 col-md-offset-2 col-sm-offset-2">
+									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
+										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
+											<div class="col-md-12 image_wrap">
+												<img src="images/team/team_suwait.jpg" alt="" />
+											</div>
+											<div class="col-md-12 text_wrap">
+												<h4>Mr. Issa Al-Suwait</h4>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
+										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
+											<div class="col-md-12 image_wrap">
+												<img src="images/team/team_saurabh.jpg" alt="" />
+											</div>
+											<div class="col-md-12 text_wrap">
+												<h4>Mr. Sourabh Sharma</h4>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
+										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
+											<div class="col-md-12 image_wrap">
+												<img src="images/team/team_reem.jpg" alt="" />
+											</div>
+											<div class="col-md-12 text_wrap">
+												<h4>Dr. Reem Al-Shammari</h4>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
+										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
+											<div class="col-md-12 image_wrap">
+												<img src="images/team/team_dana.jpg" alt="" />
+											</div>
+											<div class="col-md-12 text_wrap">
+												<h4>Mrs. Dana Winner</h4>
 											</div>
 										</div>
 									</div>
