--- a/cfp.html
+++ b/cfp.html
@@ -138,6 +138,7 @@
 											<p>Presentation Time Required: (30min/45min/15min)</p>
 											<p>Category (New Research / Current Research or Open Source Project):</p>
 											<p>Is there any demonstration? Yes or No</p>
+											<p>References:</p>
 										</div>
 									</div>
 
