--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<div class="col-md-6 col-sm-6 col-xs-12 text_wrap">
 									<h2>Areas of interest</h2>
 									<p>Being a group of Information security professionals in the Middle East region, we’ve special interest into evolving red team methodologies and threat intelligence approaches to explore new age intrusion detection possibilities. </br></br>
-	By working together, sharing knowledge will help us to give the best in protecting Public, Private and Government sectors we bound to.</p>
+	By working together, sharing knowledge will help strengthen the collective cyber resilience and overall security posture of all sectors.</p>
 								</div>
 								<div class="col-md-6 col-sm-6 col-xs-12 img_wrap">
 									<img src="images/img_3.jpg" alt="" />
