--- a/team.html
+++ b/team.html
@@ -138,7 +138,7 @@
 											</div>
 										</div>
 									</div>
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
+			<! ––					<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<div class="col-md-12 image_wrap">
 												<img src="images/team/team_reem.jpg" alt="" />
@@ -147,7 +147,7 @@
 												<h4>Dr. Reem Al-Shammari</h4>
 											</div>
 										</div>
-									</div>
+									</div>  ––>	
 									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<div class="col-md-12 image_wrap">
