--- a/cfp.html
+++ b/cfp.html
@@ -207,6 +207,7 @@
 											<p>Goodies</p>
 											<p>Slides and presentation videos will be showcased in DC0965 website and social media profiles</p>
 											<p>Lots of love and respect from the infosec community.</p>
+											<p>-We're trying to provide travel expenses for selected 5 speakers.Will update you if you are one among them. - </p>
 										</div>
 									</div>
 
