--- a/team.html
+++ b/team.html
@@ -151,7 +151,7 @@
 									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_dana.jpg" alt="" />
+												<img src="images/team/team_dana.jpeg" alt="" />
 											</div>
 											<div class="col-md-12 text_wrap">
 												<h4>Mrs. Dana Winner</h4>
