--- a/cfp.html
+++ b/cfp.html
@@ -214,7 +214,7 @@
 									<h2>PLEASE NOTE</h2>
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<p>If you would like to showcase your company’s products or technology, please review our Sponsorship opportunities and email us at <strong> admin [at] dc0965 [dot] org </strong></p>
+											<p>If you would like to showcase your company’s products or technology, email us at <strong> admin [at] dc0965 [dot] org </strong></p>
 										</div>
 									</div>
 								</div>
