--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 						<h2>Event Sponsors</h2>
 						<ul class="sponsors">
 							<li><a target="_blank" href="#"><img src="images/sponsors/crowdstrike.jpg"</a></li>
-							<li><a target="_blank" href="#"><img src="images/sponsors/crowdstrike.jpg"</a></li>
-							<li><a target="_blank" href="#"><img src="images/sponsors/crowdstrike.jpg"</a></li>
+							<!-- <li><a target="_blank" href="#"><img src="images/sponsors/crowdstrike.jpg"</a></li>
+							<li><a target="_blank" href="#"><img src="images/sponsors/crowdstrike.jpg"</a></li> -->
 						</ul>
 					</div>
 				</div>
