control case logo

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 						<ul class="sponsors">
 							<li><a target="_blank" href="#"><img src="images/sponsors/crowdstrike.jpg"</a></li>
 							<li><a target="_blank" href="#"><img src="images/sponsors/securesenze.jpg"</a></li>
+							<li><a target="_blank" href="#"><img src="images/sponsors/controlcase.jpg"</a></li>
 						</ul>
 					</div>
 				</div>
