--- a/events.html
+++ b/events.html
@@ -71,14 +71,8 @@
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<h4>DC0965 MEET-UP 0X02 The Big Meet</h4>
-											<p><strong>Date: </strong>28th March,2020 : 09:00 AM to 05:00 PM</p>
-											<p><strong>Venue: </strong>TBD</p>
-										</div>
-									</div>
-									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
-										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<h4>DC0965 MEET-UP 0X01 The Kick-Off</h4>
-											<p><strong>Date: </strong>To be Announced </p>
+											<p><strong>Date: </strong><strike>28th March,2020 : 09:00 AM to 05:00 PM</strike></p>
+											<p>We are evaluating the possibility of a slight postponement of the event due to Ministry of Interior,Kuwait's restrictions on private gathering due to Corona virus situation. </p>
 											<p><strong>Venue: </strong>TBD</p>
 										</div>
 									</div>
