--- a/cfp.html
+++ b/cfp.html
@@ -60,7 +60,7 @@
 							<div class="col-md-12 col-sm-12 col-xs-12 no-padding content_wrap">
 								<div class="col-md-12 col-sm-12 col-xs-12 text_wrap">
 									<h2>CALL FOR PAPERS</h2>
-									<br><h3>0X02 - CFP OPEN </h3>
+									<br><h3>0X02 - CFP CLOSED </h3>
 								</div>
 							</div>
 						</div>
@@ -78,17 +78,18 @@
 									</div>
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<p><strong>CFP Closes:</strong>January 1, 2020</p>
+											<p><strong>CFP Closes:</strong>January 31, 2020</p>
 										</div>
 									</div>
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<p><strong>Paper announcement:  </strong>Feb 20, 2020</p>
+											<p><strong>Paper announcement:  </strong>March 20, 2020</p>
 										</div>
 									</div>
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<p><strong>Meet-Up: </strong>March 28, 2020</p>
+											<p><strong>Meet-Up: </strong><strike>28th March,2020 : 09:00 AM to 05:00 PM</strike></p>
+											<p>We are evaluating the possibility of a slight postponement of the event due to Ministry of Interior,Kuwait's restrictions on private gathering due to Corona virus situation. </p>
 										</div>
 									</div>
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
