--- a/cfp.html
+++ b/cfp.html
@@ -89,7 +89,8 @@
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<p><strong>Meet-Up: </strong><strike>28th March,2020 : 09:00 AM to 05:00 PM</strike></p>
-											<p>We are evaluating the possibility of a slight postponement of the event due to Ministry of Interior,Kuwait's restrictions on private gathering due to Corona virus situation. </p>
+											<p>We are evaluating the possibility of a slight postponement of the event due to Ministry of Interior,Kuwait's restrictions on private gathering due to Corona virus situation. Due to concerns about the unpredictable nature of the Corona virus (COVID-19) situation, DEFCON Kuwait need to take responsible actions to help safeguard the health of our attendees and community.
+											</p><p>We have made a decision to postpone our event, with an event of the size and reach of ours it was crucial to prioritize safety. The new date will be announced shortly.</p>
 										</div>
 									</div>
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
