--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
 					<div class="col-md-12 col-sm-12 col-xs-12 text_wrap">
 						<h2>Event Sponsors</h2>
 						<ul class="sponsors">
-							<li><a target="_blank" href="#"><img src="images/sponsors/crowdstrike.jpg"</a></li>
-							<li><a target="_blank" href="#"><img src="images/sponsors/securesenze.jpg"</a></li>
-							<li><a target="_blank" href="#"><img src="images/sponsors/controlcase.jpg"</a></li>
+							<li><a target="_blank" href="https://www.crowdstrike.com/"><img src="images/sponsors/crowdstrike.jpg"</a></li>
+							<li><a target="_blank" href="https://securezense.com/"><img src="images/sponsors/securesenze.png"</a></li>
+							<li><a target="_blank" href="https://www.controlcase.com/"><img src="images/sponsors/controlcase.jpg"</a></li>
 						</ul>
 					</div>
 				</div>
