--- a/events.html
+++ b/events.html
@@ -70,12 +70,23 @@
 								<div class="col-md-12 col-sm-12 col-xs-12">
 									<div class="col-md-12 col-sm-12 col-xs-12 tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
+											<h4>DC0965 Partnering with YAS for YASCON 2020</h4>
+											<p><strong>Date: </strong>1st November,2020 : 09:00 AM to 05:00 PM</p>
+											<p>In 2017 around the 61st Kerala Piravi, a bunch of young security enthusiasts established YAS (Yet Another Security). YAS was founded with the ultimate desire to build stronger coterie around information security in Kerala. Our motto is to spread education, share experiences and knowledge outside of the traditional structures in a more community focused environment. And in 2020 we are stepping up the game to the next level!! </p><p>On this year’s Kerala Piravi Day, the world will witness our first ever virtual cyber security conference- <a href="https://yetanothersec.com/yascon2020/">YASCON 2020</a>.</p>
+											<p><strong>Venue: </strong>Tech Talks, Trainings, CTF and a lot more to be experienced – all within the comfort of your home. “It’s all VIRTUAL”</p>
+											<p><strong>Speakers: </strong><a href="https://yetanothersec.com/yascon2020/speakers.php">YASCON 2020 Speakers</a></p>
+											<p><strong>Schedule: </strong><a href="https://yetanothersec.com/yascon2020/schedule.php">YASCON 2020 Schedule</a></p>
+											<p><strong>CTF: </strong>YASCON CTF will be held during Grayhat Conference on Oct 31st.Registrations to start soon. For more details, please visit <a href="https://grayhat.co/yascon-ctf/">our website</a></p>
+										</div>
+										&nbsp&nbsp
+										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<h4>DC0965 MEET-UP 0X02 The Big Meet</h4>
 											<p><strong>Date: </strong><strike>28th March,2020 : 09:00 AM to 05:00 PM</strike></p>
 											<p>Due to concerns about the unpredictable nature of the Corona virus (COVID-19) situation, DEFCON Kuwait need to take responsible actions to help safeguard the health of our attendees and community.
 											</p><p>We have made a decision to postpone our event, with an event of the size and reach of ours it was crucial to prioritize safety. The new date will be announced shortly.</p>
 											<p><strong>Venue: </strong>TBD</p>
 										</div>
+										
 									</div>
 								</div>
 							</div>
