--- a/team.html
+++ b/team.html
@@ -86,10 +86,10 @@
 									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_samar.jpg" alt="" />
+												<img src="images/team/team_robin.jpeg" alt="" />
 											</div>
 											<div class="col-md-12 text_wrap">
-												<h4>Mrs. Samar Rashad</h4>
+												<h4>Mr. Robin Ramani</h4>
 											</div>
 										</div>
 									</div>
@@ -118,16 +118,6 @@
 									<h2>Advisors</h2>
 								</div>
 								<div class="col-md-8 col-sm-6 col-xs-12 col-md-offset-2 col-sm-offset-2">
-									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
-										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
-											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_suwait.jpg" alt="" />
-											</div>
-											<div class="col-md-12 text_wrap">
-												<h4>Mr. Issa Al-Suwait</h4>
-											</div>
-										</div>
-									</div>
 									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<div class="col-md-12 image_wrap">
