--- a/team.html
+++ b/team.html
@@ -86,7 +86,7 @@
 									<div class="col-md-4 col-sm-4 col-xs-12 team_tile_wrap">
 										<div class="col-md-12 col-sm-12 col-xs-12 no-padding tile">
 											<div class="col-md-12 image_wrap">
-												<img src="images/team/team_ubais.jpeg" alt="" />
+												<img src="images/team/team_ubais.jpg" alt="" />
 											</div>
 											<div class="col-md-12 text_wrap">
 												<h4>Mr. Ubais P K</h4>
